# WANDB-Plot-Skill

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.github/workflows/: tests.yml
skills/wandb-plot/: SKILL.md  pyproject.toml  requirements-dev.txt  requirements.txt
skills/wandb-plot/scripts/: __init__.py  download_plots.py  list_metrics.py  list_runs.py  wandb_utils.py
skills/wandb-plot/tests/: __init__.py  test_download_plots.py  test_generate_plots.py  test_integration.py  test_list_metrics.py  test_list_projects.py  test_list_runs.py  test_wandb_utils.py
skills/wandb-plot/tests/fixtures/: mock_run_data.json
wandb-plot/: SKILL.md  SKILL_CODEX.md  pyproject.toml
wandb-plot/scripts/: generate_plots.py  list_projects.py  list_runs.py  wandb_utils.py
wandb-plot/tests/: conftest.py  test_generate_plots.py  test_wandb_utils.py
wandb-plot/tests/fixtures/: mock_metrics.json
